--- a/style/sass/_homepage.scss
+++ b/style/sass/_homepage.scss
@@ -171,3 +171,34 @@
 		}
 	}
 }
+
+/* Tablet */
+@media (max-width: 1136px) and (min-width: 769px) {
+  .sample-headline {
+		h1 {
+			// TODO: try to remove the important, might be able to remove font-size
+	  	font-size: 4.3em !important;
+	  	padding: 0 30px 0 30px;
+	  }
+		h4 {
+	  	padding: 0 30px 0 35px;
+			span {
+		  	padding-bottom: .3em;
+		  }
+	  }
+	}
+
+  .sample-copy {
+		// TODO: might be able to remove font-size
+  	font-size: 1.2em;
+  }
+
+  .quotes {
+		display: block;
+		float: left;
+  	height: 300px;
+  	margin-top: .5em;
+		text-align: center;
+		width: 100%;
+  }
+}
