--- a/style/sass/_homepage.scss
+++ b/style/sass/_homepage.scss
@@ -202,3 +202,47 @@
 		width: 100%;
   }
 }
+
+/* Tablet */
+@media (max-width: 768px) and (min-width: 641px) {
+  .chapters {
+		h3 {
+	  	font-size: 1.3em;
+	  	margin-bottom: 2em;
+			padding: 0 15% 0 15%;
+	  }
+	}
+
+	.sample-headline {
+		h1 {
+			// TODO: see if we can remove the important, and if we need the font-size
+	  	font-size: 3.5em !important;
+	  	padding: 0 30px 0 30px;
+	  }
+		h4 {
+			margin-top: 50px;
+	  	padding: 0 30px 0 35px;
+			span {
+				border-bottom: 2px solid #7FB9CB;
+		  	padding-bottom: .3em;
+		  }
+	  }
+	}
+
+  .sample-copy {
+  	font-size: 1em;
+		.sample-copy-container {
+	  	padding: 0 10% 0 8%;
+	  	margin: 50px 0 50px 0;
+	  }
+  }
+
+  .quotes {
+  	text-align: center;
+  	width: 100%;
+  	height: 300px;
+  	margin-top: .5em;
+  	display: block;
+  	float: left;
+  }
+}
